--- a/at/pyproject.toml
+++ b/at/pyproject.toml
@@ -5,5 +5,6 @@ description = "Track, log, and evaluate AI models. Supports OpenAI, Claude, Goog
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "click>=8.3.0",
     "openai>=1.108.2",
 ]
