feat(setup): feat setup

--- a/at/pyproject.toml
+++ b/at/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "at"
 version = "0.1.0.beta"
@@ -8,3 +12,16 @@ dependencies = [
     "click>=8.3.0",
     "openai>=1.108.2",
 ]
+authors = [{name = "yanghui"}]
+
+[project.urls]
+Homepage = "https://github.com/yanghui1-arch/AT"
+
+[project.scripts]
+aitrace = "at.cli:cli"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-dir]
+"" = "src"
