chore: add requests dependency

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.12"
 dependencies = [
     "click>=8.3.0",
     "openai>=1.108.2",
+    "requests>=2.32.5",
 ]
 authors = [{name = "yanghui"}]
 
