--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "click>=8.3.0",
     "openai>=1.108.2",
     "requests>=2.32.5",
+    "uuid6>=2025.0.1",
 ]
 authors = [{name = "yanghui"}]
 
