build: build configure

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -21,3 +21,7 @@ Homepage = "https://github.com/yanghui1-arch/AITrace.git"
 
 [project.scripts]
 aitrace = "aitrace.cli:cli"
+
+[tool.setuptools.packages.find]
+where = ['.']
+include = ['aitrace*']
