--- a/web/package.json
+++ b/web/package.json
@@ -32,9 +32,11 @@
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-table": "^8.21.3",
+    "@xyflow/react": "^12.9.2",
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dagre": "^0.8.5",
     "lucide-react": "^0.548.0",
     "next-themes": "^0.4.6",
     "openai": "^6.8.0",
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/dagre": "^0.7.53",
     "@types/node": "^24.9.2",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
