--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "click>=8.3.0",
+    "more-itertools>=10.8.0",
     "openai>=1.108.2",
     "requests>=2.32.5",
     "uuid6>=2025.0.1",
