--- a/backend/aitrace-java-backend/src/main/resources/application.yml
+++ b/backend/aitrace-java-backend/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
+jwt:
+  secret: "aitrace_initial_secret"
+  expiration: 3600000
+
 github:
   client-id: Ov23liWyhyfoA5aDkDQx
   client-secret: adc08c0d1d204701bc7930c80e9dc42da17649b0
