--- a/web/package.json
+++ b/web/package.json
@@ -32,10 +32,11 @@
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-table": "^8.21.3",
-    "@xyflow/react": "^12.9.2",
+    "@xyflow/react": "^12.10.0",
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dagre": "^0.8.5",
     "lucide-react": "^0.548.0",
     "next-themes": "^0.4.6",
