--- a/web/.env.production
+++ b/web/.env.production
@@ -1,4 +1,5 @@
 # local host in prod now
 VITE_API_BASE_URL="http://localhost:8080/api"
+VITE_KUBENT_API_BASE_URL="http://localhost:8080/kubent/api"
 VITE_GITHUB_CLIENT_ID="Ov23liWyhyfoA5aDkDQx"
 VITE_GITHUB_REDIRECT_URI="http://localhost:5173/auth/github/callback"
