--- a/kubent/pyproject.toml
+++ b/kubent/pyproject.toml
@@ -5,5 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "asyncpg>=0.31.0",
+    "fastapi>=0.124.4",
     "openai>=2.11.0",
+    "pyjwt>=2.10.1",
+    "sqlalchemy>=2.0.45",
+    "uvicorn>=0.38.0",
 ]
