--- a/kubent/pyproject.toml
+++ b/kubent/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "kubent"
-version = "0.1.0"
+version = "0.1.0-bata"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
