--- a/web/.env.production
+++ b/web/.env.production
@@ -1,5 +1,6 @@
 # local host in prod now
-VITE_API_BASE_URL="http://localhost:8080/api"
+VITE_API_BASE_URL="/api"
 VITE_KUBENT_API_BASE_URL="http://localhost:8000/kubent/api"
 VITE_GITHUB_CLIENT_ID="Ov23liWyhyfoA5aDkDQx"
+# local
 VITE_GITHUB_REDIRECT_URI="http://localhost:5173/auth/github/callback"
