[python-sdk] version 0.1.0.beta -> 0.1.1

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aitrace"
-version = "0.1.0.beta"
+version = "0.1.1"
 description = "Track, log, and evaluate AI models. Supports OpenAI, Claude, Google API and custom Pytorch models."
 readme = "README.md"
 requires-python = ">=3.12"
