[kubent] update pyproject.toml

--- a/kubent/pyproject.toml
+++ b/kubent/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "kubent"
 version = "0.1.0-beta"
-description = "Add your description here"
+description = "Kubent: offer an enterprise-level solution to improve agent system better."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
