--- a/web/package.json
+++ b/web/package.json
@@ -44,8 +44,11 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.67.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^3.20.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
